fix icons on small screen

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -418,6 +418,9 @@ TOC :
     line-height: 24px;
     width: 260px!important;
   }
+  .section-title:after{
+    content: "";
+  }
 
    /* mobile navigation
    -------------------------------------------------------------------- */
